site em andamento

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Meu Site</title>
 </head>
 <body>
-	<header>
+	<header class="container">
 		<img src="./assets/images/logo.png" alt="imagem do logo">
 		
 		<nav>
@@ -21,7 +21,7 @@
 		</nav>
 	</header>
 	
-	<main>
+	<main class="container">
 		<section>
 			<article>
 				<h1>Web Design</h1>
