70% do projeto em andamento

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<header class="container">
+		
 		<img src="./assets/images/logo.png" alt="imagem do logo">
 		
 		<nav>
@@ -22,13 +23,13 @@
 	</header>
 	
 	<main class="container">
-		<section>
+		<section class="row sobre-web-design">
 			<article>
 				<h1>Web Design</h1>
 				<h2>Landing Page</h2>
 				<p>Amet repellat consequuntur temporibus fugit molestias? Fugiat quia ad pariatur quae rem perspiciatis quis. Harum sed placeat in consequatur quae? Provident fugiat deserunt fugiat asperiores dolorum? Aut officia id necessitatibus?</p>
 			
-				<a href="#">Saiba Mais</a> 
+				<a href="#" class="btn btn-laranja">Saiba Mais</a> 
 			</article>
 		
 			<figcaption>
