--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</section>
 	</main>
 	
-	<footer>
+	<footer class="container">
 		<ul>
 			<li><a href="#"><img src="./assets/images/logo-insta.png" alt="logo instagram"></a></li>
 			<li><a href="#"><img src="./assets/images/logo-twitter.png" alt="twitter"></a></li>
