--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</main>
 	
 	<footer class="container">
-		<ul>
+		<ul class="row">
 			<li><a href="#"><img src="./assets/images/logo-insta.png" alt="logo instagram"></a></li>
 			<li><a href="#"><img src="./assets/images/logo-twitter.png" alt="twitter"></a></li>
 			<li><a href="#"><img src="./assets/images/logo-facebook.png" alt="logo facebook"></a></li>
