--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<main class="container">
 		<section class="row sobre-web-design">
 			<article>
-				<h1>Web Design</h1>
+				<h1>Web Designer</h1>
 				<h2>Landing Page</h2>
 				<p>Amet repellat consequuntur temporibus fugit molestias? Fugiat quia ad pariatur quae rem perspiciatis quis. Harum sed placeat in consequatur quae? Provident fugiat deserunt fugiat asperiores dolorum? Aut officia id necessitatibus?</p>
 			
